--- a/redirect1.html
+++ b/redirect1.html
@@ -9,7 +9,7 @@
         // Extrair o código de autorização da URL e redirecionar para o Discord
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('code');
-        window.location.href = `https://www.redirect-url.com?code=${code}&state=RANDOM_ID
+        window.location.href = `https://gustavohtss1.github.io/Redirect/?code=${code}&state=TESTE
 `;
     </script>
 </head>
